tests/ui/input/multiple_input_errors.stderr
error: cannot implement FuncMap over lifetime parameter
 --> tests/ui/input/multiple_input_errors.rs:4:18
  |
4 | #[funcmap(params('a, N, X))]
  |                  ^^

error: cannot implement FuncMap over const generic
 --> tests/ui/input/multiple_input_errors.rs:4:22
  |
4 | #[funcmap(params('a, N, X))]
  |                      ^

error: unknown generic parameter
 --> tests/ui/input/multiple_input_errors.rs:4:25
  |
4 | #[funcmap(params('a, N, X))]
  |                         ^

error: expected at least one type parameter, found none
 --> tests/ui/input/multiple_input_errors.rs:5:10
  |
5 | enum Test<'a, const N: usize> {
  |          ^^^^^^^^^^^^^^^^^^^^

error: #[funcmap] helper attribute is not supported for variants
 --> tests/ui/input/multiple_input_errors.rs:6:5
  |
6 |     #[funcmap]
  |     ^^^^^^^^^^

error: #[funcmap] helper attribute is not supported for fields
 --> tests/ui/input/multiple_input_errors.rs:8:9
  |
8 |         #[funcmap]
  |         ^^^^^^^^^^

error: #[funcmap] helper attribute is not supported for fields
  --> tests/ui/input/multiple_input_errors.rs:11:9
   |
11 |         #[funcmap]
   |         ^^^^^^^^^^

error: #[funcmap] helper attribute is not supported for variants
  --> tests/ui/input/multiple_input_errors.rs:15:5
   |
15 |     #[funcmap]
   |     ^^^^^^^^^^
